# daily-login

./: .gitignore  .keep-alive  README.md  config.example.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
scripts/: format_data.sh  keepalive.py
src/: logger.py  login.py  repo.py  utils.py
src/schemas/: config.py  data.py
