[tool.poetry]
name = "daily-login"
version = "0.1.0"
description = ""
authors = ["narumi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fgoapi = {git = "https://github.com/chaldea-center/fgoapi.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
